# server-template

./: .env  Cargo.toml  README.md  justfile
tests/: health.hurl
