[workspace]
resolver = "2"
members = ["./packages/*", "packages/shared"]

[workspace.dependencies]
argon2 = "0.5.3"
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
chrono = "0.4.40"
config = "0.15.11"
dotenvy = "0.15.7"
figlet-rs = "0.1.5"
http = "1.3.1"
jsonwebtoken = "9.3.1"
paste = "1.0.15"
rand = "0.8"
reqwest = "0.12.15"
rsa = "0.9.8"
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.9", features = ["oid"] }
sqlx = "0.8.5"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "rc_schema",
    "preserve_order",
    "preserve_path_order",
] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
time = "0.3.41"
async-trait = "0.1.88"
strum = { version = "0.27.1", features = ["derive"] }
